<?xml version="1.0" encoding="utf-8"?>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dl_menu">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/srl_movie">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.StartFragment">


    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="@dimen/image_min_size"
        android:layout_height="@dimen/image_min_size"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/large_margin_top"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu" />

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_min_size"
        android:layout_marginTop="@dimen/large_margin_top"
        android:layout_marginStart="@dimen/concat_margin"
        android:id="@+id/sv_movie"
        android:layout_marginEnd="@dimen/concat_margin"
        app:iconifiedByDefault="false"
        app:searchIcon="@null"
        app:searchHintIcon="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="@dimen/image_min_size"
        android:layout_height="@dimen/image_min_size"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginTop="@dimen/large_margin_top"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/default_margin_top"
        tools:listitem="@layout/rv_tab" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/concat_margin"
        android:layout_marginStart="@dimen/default_margin_top"
        android:layout_marginTop="@dimen/default_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/rv_tab"
        android:scrollbars="none"
        android:id="@+id/hsv_types"
        >

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_types"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/concat_margin"


            android:orientation="horizontal"

            app:singleLine="true"

            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_action"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_crime"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crime" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_comedy"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comedy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDram"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drama" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action2" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="@dimen/default_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/hsv_types"
        tools:listitem="@layout/rv_movies"
        android:clipToPadding="false"
        android:paddingStart="@dimen/large_padding"
        android:paddingEnd="@dimen/large_padding"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
