<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:id="@+id/cl_movie"
    android:layout_marginStart="@dimen/rv_movies_cl_padding"
    android:layout_marginEnd="@dimen/rv_movies_cl_padding"
    android:rotation="10"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/iv_movie"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/tv_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_top"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/bold_text_size_def"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_margin_top"
        app:drawableLeftCompat="@drawable/star"
        android:drawablePadding="@dimen/drawable_padding"


        android:text="@string/_8_2"
        android:textSize="@dimen/bold_text_size_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie" />
</androidx.constraintlayout.widget.ConstraintLayout>